--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
       const [penaltyTime, setPenaltyTime] = useState('');
       const [penaltyPlayer, setPenaltyPlayer] = useState('');
       const [editingPenaltyIndex, setEditingPenaltyIndex] = useState(null);
+      const [editingPenaltyOriginalPeriod, setEditingPenaltyOriginalPeriod] = useState(null);
       const [goalEvents, setGoalEvents] = useState([]);
       const [penaltyEvents, setPenaltyEvents] = useState([]);
       const [otherEvents, setOtherEvents] = useState([]);
@@ -477,6 +478,7 @@
       const [goalMinusPlayers, setGoalMinusPlayers] = useState([]);
       const [goalSOGPlayers, setGoalSOGPlayers] = useState([]);
       const [editingGoalIndex, setEditingGoalIndex] = useState(null);
+      const [editingGoalOriginalPeriod, setEditingGoalOriginalPeriod] = useState(null);
       const [goalFormCollapsed, setGoalFormCollapsed] = useState(false);
       const [goalTimelineCollapsed, setGoalTimelineCollapsed] = useState(true);
       const [penaltyFormCollapsed, setPenaltyFormCollapsed] = useState(false);
@@ -2709,7 +2711,7 @@ db.ref(`matches/${code}`).set({
             team: recordingGoal,
             situation: goalSituation,
             time: goalTime,
-            period: currentPeriod,
+            period: editingGoalIndex !== null ? editingGoalOriginalPeriod : currentPeriod,
             timestamp: editingGoalIndex !== null ? goalEvents[editingGoalIndex].timestamp : Date.now(),
             scorers: goalScorers,
             assists: goalAssists,
@@ -2883,6 +2885,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
           setGoalMinusPlayers([]);
           setGoalSOGPlayers([]);
           setEditingGoalIndex(null);
+setEditingGoalOriginalPeriod(null);
 
           // Collapse form, expand timeline, highlight new event
           setGoalFormCollapsed(true);
@@ -2905,6 +2908,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
           setGoalWizardStep(0);
           setRecordingGoal(null);
           setEditingGoalIndex(null);
+setEditingGoalOriginalPeriod(null);
           setGoalScorers([]);
           setGoalAssists([]);
           setGoalPlusPlayers([]);
@@ -2917,6 +2921,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
           setPenaltyTime('');
           setPenaltyPlayer('');
           setEditingPenaltyIndex(null);
+setEditingPenaltyOriginalPeriod(null);
           setOtherWizardOpen(false);
           setOtherTeam(null);
           setOtherEventType('timeout');
@@ -3447,6 +3452,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                               setPenaltyTime('');
                               setPenaltyPlayer('');
                               setEditingPenaltyIndex(null);
+setEditingPenaltyOriginalPeriod(null);
                             }}
                             className={darkMode ? 'flex-1 bg-gray-700 hover:bg-gray-600 py-2 rounded font-semibold text-white' : 'flex-1 bg-gray-200 hover:bg-gray-300 py-2 rounded font-semibold'}
                           >
@@ -3475,7 +3481,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                                 penaltyType: penaltyType,
                                 infraction: penaltyInfraction,
                                 time: penaltyTime,
-                                period: currentPeriod,
+                                period: editingPenaltyIndex !== null ? editingPenaltyOriginalPeriod : currentPeriod,
                                 timestamp: editingPenaltyIndex !== null ? penaltyEvents[editingPenaltyIndex].timestamp : Date.now()
                               };
 
@@ -3513,6 +3519,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                               setPenaltyTime('');
                               setPenaltyPlayer('');
                               setEditingPenaltyIndex(null);
+setEditingPenaltyOriginalPeriod(null);
 
                               // Collapse form, expand timeline, highlight new event
                               setPenaltyFormCollapsed(true);
@@ -3997,6 +4004,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                               setGoalSituation('EQ');
                               setGoalTime('');
                               setEditingGoalIndex(null);
+setEditingGoalOriginalPeriod(null);
                               setGoalScorers([]);
                               setGoalAssists([]);
                               setGoalPlusPlayers([]);
@@ -4087,6 +4095,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                                         if (matchEnded) return;
                                         const event = goalEvents[idx];
                                         setEditingGoalIndex(idx);
+                                        setEditingGoalOriginalPeriod(event.period);
                                         setRecordingGoal(event.team);
                                         setGoalSituation(event.situation);
                                         setGoalTime(event.time || '');
@@ -4285,6 +4294,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                                       onClick={() => {
                                         if (matchEnded) return;
                                         const event = penaltyEvents[idx];
+setEditingPenaltyOriginalPeriod(event.period);
                                         setEditingPenaltyIndex(idx);
                                         setPenaltyTeam(event.team);
                                         setPenaltyType(event.penaltyType);
@@ -5943,19 +5953,47 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                         </div>
 
                         {/* Period Marker at BOTTOM with whistle icon */}
-                        <div className="relative flex items-center justify-center h-12">
-                          {/* Whistle icon on the center line */}
-                          <div className={`relative z-10 p-1.5 rounded-full border-2 ${darkMode ? 'bg-gray-800 border-gray-600 text-gray-300' : 'bg-white border-gray-300 text-gray-600'}`}>
-                            <WhistleIcon />
-                          </div>
+<div className="relative flex items-center justify-center h-12 mb-6">
+  {/* Startande målvakter - ÖVER period marker */}
+  <div className="absolute bottom-full mb-4 w-full">
+    <div className="relative">
+      {/* Center line */}
+      <div className={`absolute left-1/2 top-0 bottom-0 w-0.5 ${darkMode ? 'bg-gray-600' : 'bg-gray-300'} transform -translate-x-1/2`}></div>
+      
+      {/* Home team goalie - LEFT */}
+      <div className="absolute right-1/2 top-0 pr-8 text-right">
+        <div className={`inline-block ${darkMode ? 'bg-gray-700 border border-gray-600' : 'bg-gray-50 border border-gray-200'} rounded px-2 py-1 text-xs`}>
+          <span className={`${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>🥅</span>
+          <span className={`ml-1 font-semibold ${darkMode ? 'text-gray-200' : 'text-gray-800'}`}>
+            #{goalieMap.home?.starter || '?'}
+          </span>
+        </div>
+      </div>
+      
+      {/* Away team goalie - RIGHT */}
+      <div className="absolute left-1/2 top-0 pl-8 text-left">
+        <div className={`inline-block ${darkMode ? 'bg-gray-700 border border-gray-600' : 'bg-gray-50 border border-gray-200'} rounded px-2 py-1 text-xs`}>
+          <span className={`${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>🥅</span>
+          <span className={`ml-1 font-semibold ${darkMode ? 'text-gray-200' : 'text-gray-800'}`}>
+            #{goalieMap.away?.starter || '?'}
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
 
-                          {/* Period text TO THE SIDE of whistle */}
-                          <div className={`absolute left-1/2 ml-8 whitespace-nowrap ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
-                            <span className="font-bold text-sm sm:text-base tracking-wider uppercase">
-                              {period <= 3 ? `Period ${period}` : 'Overtime'}
-                            </span>
-                          </div>
-                        </div>
+  {/* Whistle icon on the center line */}
+  <div className={`relative z-10 p-1.5 rounded-full border-2 ${darkMode ? 'bg-gray-800 border-gray-600 text-gray-300' : 'bg-white border-gray-300 text-gray-600'}`}>
+    <WhistleIcon />
+  </div>
+
+  {/* Period text TO THE SIDE of whistle */}
+  <div className={`absolute left-1/2 ml-8 whitespace-nowrap ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
+    <span className="font-bold text-sm sm:text-base tracking-wider uppercase">
+      {period <= 3 ? `Period ${period}` : 'Overtime'}
+    </span>
+  </div>
+</div>
                       </div>
                     </div>
                   ))}
