--- a/index.html
+++ b/index.html
@@ -5740,9 +5740,13 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                     ⛶ PLAYER EVENTS
                   </button>
                 ) : (
-                  <div className="col-span-2 text-center text-[9px] opacity-40 py-1">
-                    SIMPLE MODE
-                  </div>
+<>
+  <div className="col-span-2 text-center text-[9px] opacity-40 py-1">
+    SIMPLE MODE
+  </div>
+  <div className="col-span-2 h-[1px] invisible"></div>
+</>
+
                 )}
               </div>
             </div>
